--- a/SpaceWeb/Views/Shared/_Layout.cshtml
+++ b/SpaceWeb/Views/Shared/_Layout.cshtml
@@ -60,8 +60,23 @@
                             <li class="scroll-to-section"><a href="#about">About Us</a></li>
                             <li class="scroll-to-section"><a href="#services">Services</a></li>
                             <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
-                            <li class="scroll-to-section"><a href="#blog">Blog</a></li>
-                            <li class="scroll-to-section"><a href="#contact">Message Us</a></li>
+
+
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="scroll-to-section"><a >@User.Identity.Name</a></li>
+                                <li class="scroll-to-section"><a asp-action="Logout" asp-controller="Account"> Logout</a></li>
+                            }
+                            else
+                            {
+                                <li class="scroll-to-section"><a asp-action="Register" asp-controller="Account">Register</a></li>
+                                <li class="scroll-to-section"><a asp-action="Login" asp-controller="Account"> Login</a></li>
+                            }
+                           
+
+
+
+
                             <li class="scroll-to-section"><div class="main-red-button"><a href="#contact">Contact Now</a></div></li>
                         </ul>
                         <a class='menu-trigger'>
